--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap');
+      </style>
     <link rel="icon" href="./favicon-32x32.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
