--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap');
       </style>
-    <link rel="icon" href="./favicon-32x32.png" />
+    <link rel="shortcut icon" href="./favicon-32x32.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
